fix(footer): remove donation button on mobile resolutions

--- a/components/footer/footer.styl
+++ b/components/footer/footer.styl
@@ -110,11 +110,12 @@
 			right 24px
 			transform translateY(-50%)
 
+	// TODO: Remove !important
 	&__donate-button
-		display none
+		display none !important
 
 		+above(size-m)
-			display block
+			display inline-block !important
 
 	&__send-button
 		position relative
